fix scrollbars

--- a/app/root.css
+++ b/app/root.css
@@ -5,6 +5,7 @@
 @layer base {
 	:root {
 		--header-h: 150px;
+		scrollbar-color: theme(colors.on.background) theme(colors.background.DEFAULT);
 	}
 
 	header {
@@ -13,18 +14,6 @@
 
 	body {
 		@apply bg-background text-on-background;
-	}
-
-	::-webkit-scrollbar {
-		@apply w-[16px];
-	}
-
-	::-webkit-scrollbar-thumb {
-		@apply rounded-full border-4 border-solid border-transparent bg-clip-padding;
-	}
-
-	* {
-		@apply scrollbar-thumb-color-on-background scrollbar-track-color-background;
 	}
 }
 
